traces/bug_76.txt
examples++-load/myfunction.cpp:62: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/myfunction.cpp:62:1: initialization of callDoLoadInit
60.   }
61.   
62. > LOADFUNC(init);

examples++-load/myfunction.cpp:62:1: call to DoLoadInit
60.   }
61.   
62. > LOADFUNC(init);

examples++-load/myfunction.cpp:62:1: call to addInitFunct
  60.   }
  61.   
  62. > LOADFUNC(init);

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
